Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-36130

main.mysqldump fails in parallel mysql-import test

    XMLWordPrintable

Details

    Description

      See crossreference. happens many times per days, the failure looks like

      CURRENT_TEST: main.mysqldump
      --- /home/buildbot/amd64-ubuntu-2004-debug/build/mysql-test/main/mysqldump.result	2025-02-20 05:12:46.000000000 +0000
      +++ /home/buildbot/amd64-ubuntu-2004-debug/build/mysql-test/main/mysqldump.reject	2025-02-20 05:27:27.093548265 +0000
      @@ -4619,6 +4619,7 @@
       drop table words;
       Error: 1146, Table 'test.words' doesn't exist, when using statement: ALTER TABLE `test`.`words` DISABLE KEYS
       mariadb-import: Error 1146 Table 'test.words' doesn't exist
      +mariadb-import: Error 2013 Lost connection to server during query
       drop table t1;
       drop table t2;
       drop table words2;
      

      or

      --- /home/buildbot/amd64-ubuntu-2004-debug/build/mysql-test/main/mysqldump.result	2025-02-19 18:04:33.000000000 +0000
      +++ /home/buildbot/amd64-ubuntu-2004-debug/build/mysql-test/main/mysqldump.reject	2025-02-19 18:42:10.493517331 +0000
      @@ -4619,6 +4619,7 @@
       drop table words;
       Error: 1146, Table 'test.words' doesn't exist, when using statement: ALTER TABLE `test`.`words` DISABLE KEYS
       mariadb-import: Error 1146 Table 'test.words' doesn't exist
      +mariadb-import: Error 2006 Server has gone away
       drop table t1;
       drop table t2;
       drop table words2;
      

      or

      --- /home/buildbot/s390x-sles-1506/build/mysql-test/main/mysqldump.result	2025-02-19 20:00:56.000000000 +0000
      +++ /home/buildbot/s390x-sles-1506/build/mysql-test/main/mysqldump.reject	2025-02-20 01:34:59.815995865 +0000
      @@ -4619,6 +4619,7 @@
       drop table words;
       Error: 1146, Table 'test.words' doesn't exist, when using statement: ALTER TABLE `test`.`words` DISABLE KEYS
       mariadb-import: Error 1146 Table 'test.words' doesn't exist
      +mariadb-import: Error 2026 TLS/SSL error: unexpected eof while reading
       drop table t1;
       drop table t2;
       drop table words2;
      

      or

      --- /home/buildbot/aarch64-fedora-41/build/mysql-test/main/mysqldump.result	2025-02-19 19:58:28.000000000 +0000
      +++ /home/buildbot/aarch64-fedora-41/build/mysql-test/main/mysqldump.reject	2025-02-19 20:10:34.958293528 +0000
      @@ -4619,7 +4619,7 @@
       drop table words;
       Error: 1146, Table 'test.words' doesn't exist, when using statement: ALTER TABLE `test`.`words` DISABLE KEYS
       mariadb-import: Error 1146 Table 'test.words' doesn't exist
      -drop table t1;
      +mariadb-importdrop table t1;
       drop table t2;
       drop table words2;
      

      Attachments

        Activity

          People

            wlad Vladislav Vaintroub
            serg Sergei Golubchik
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 0.5h
                0.5h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.