MDEV-36130: main.mysqldump fails in parallel mysql-import test

Skip printing the error if it is expected — that is, when mariadb-import
is aborting.

In a multithreading scenario, another thread may encounter an error
because the corresponding connection was killed. Do not print this error.